--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 author:
   email: example@example.com
   name: Andrew Pitt
-baseurl: https://example.com
+baseurl: https://www.maisondemilune.ca
 copyright: © Andrew PItt
 languagecode: en-us
 enablerobotstxt: true
